[package]
name = "audeye"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
hound = { version = "3.4"}
textplots = { version = "0.8" }
terminal_size = { version = "0.1.17"}
sndfile = { git = "https://github.com/maxmarsc/sndfile.rs"}
rayon = "1.5.1"
tui = { version = "0.17", default-features=true, features=["crossterm"]}
crossterm = "0.20"
termion = "1.5"
realfft = "3.0.0"
rustfft = "6.0.1"
rand = "0.8"
argh = "0.1"
viuer = "0.5.2"
fast_image_resize = "0.7.0"
image = "0.24.1"
apodize = "1.0.0"
audiotags = "0.2.7182"
num-traits = "0.2.14"
num-integer = "0.1.44"