[package]
name = "audeye"
version = "0.1.0"
edition = "2018"
description = "A terminal user interface for audio content visualization"
homepage = "https://github.com/maxmarsc/audeye"
documentation = "https://github.com/maxmarsc/audeye"
repository = "https://github.com/maxmarsc/audeye"
keywords = ["audio", "tui", "cli", "terminal", "wav", "waveform", "rms", "peak", "metadata", "spectrogram", "fft", "file"]
categories = ["command-line-utilities"]
authors = ["Maxime COUTANT <maxime.coutant@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
hound = { version = "3.4"}
terminal_size = { version = "0.1.17"}
sndfile = "0.1.1"
rayon = "1.5.1"
tui = { version = "0.17", default-features=true, features=["crossterm"]}
crossterm = "0.20"
termion = "1.5"
realfft = "3.0.0"
rustfft = "6.0.1"
rand = "0.8"
argh = "0.1"
fast_image_resize = "0.7.0"
image = "0.24.2"
apodize = "1.0.0"
audiotags = "0.2.7182"
num-traits = "0.2.14"
num-integer = "0.1.45"
assert_cmd = "2.0.4"
predicates = "2.1.1"