[package]
name = "audeye"
version = "0.2.1"
edition = "2018"
description = "A terminal user interface for audiofile content visualization"
homepage = "https://github.com/maxmarsc/audeye"
documentation = "https://github.com/maxmarsc/audeye"
repository = "https://github.com/maxmarsc/audeye"
keywords = ["audiofile", "tui", "spectrogram", "waveform", "visualization"]
categories = ["command-line-utilities"]
authors = ["Maxime COUTANT <maxime.coutant@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
terminal_size = { version = "0.1.17"}
sndfile = "0.1.1"
rayon = "1.5.1"
tui = { version = "0.19", default-features=true, features=["crossterm"]}
crossterm = "0.25"
termion = "1.5"
realfft = "3.0.0"
rustfft = "6.0.1"
rand = "0.8"
argh = "0.1"
fast_image_resize = "0.7.0"
apodize = "1.0.0"
audiotags = "0.4"
num-traits = "0.2.14"
num-integer = "0.1.45"
colorgrad = "0.6.1"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"